5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4444/executions/1667_2327.log
== TEST (2019-04-16 16:06:56) 
-- CODE:
x=3.7654
y=2.3479
w=x/y

-- OUTPUT:
11.696268269159432
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:07:11) 
-- CODE:
x= 3.7654
y= 2.3479
w= x/y

-- OUTPUT:
11.696268269159432
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:08:38) 
-- CODE:
x=float(input("digite   "))
y= float (input("digite   "))
w= x/y


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x=float(input())
ValueError: could not convert string to float: 'hermione'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:09:13) 
-- CODE:
x=float(input("digite   "))
y= float (input("digite   "))
print= x/y


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x=float(input())
ValueError: could not convert string to float: 'hermione'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:09:26) 
-- CODE:
x=float(input("digite   "))
y= float (input("digite   "))
print= x/y


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x=float(input())
ValueError: could not convert string to float: 'hermione'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:12:52) 
-- CODE:
x=(input("digite nome"))
if (nome="hermione"):
	3.7654/2.3479

print="gina"


-- ERROR:
File "XXXX", line 2
    if (nome="hermione"):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:16:11) 
-- CODE:
eh= 3.7654
th = 2.3479
vh= eh/th
-- ERROR:
File "XXXX", line 2
    if (nome="hermione"):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:18:04) 
-- CODE:
eh= float(3.7654)
th = float(2.3479)
vh= eh/th
eg=float(3.674)
tg=float(2.789)
vg=eg/tg

-- ERROR:
File "XXXX", line 2
    if (nome="hermione"):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:21:45) 
-- CODE:
eh= float(3.7654)
th = float(2.3479)
vh= eh/th
eg=float(3.674)
tg=float(2.789)
vg=eg/tg
bruxo= input("digite o nome do bruxo:  ")
if(bruxo =="hermione"):
	print(vh)
else:
	print(vg)

	
-- OUTPUT:
1.6037309936539035
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:21:59) 
-- CODE:
eh= float(3.7654)
th = float(2.3479)
vh= eh/th
eg=float(3.674)
tg=float(2.789)
vg=eg/tg
bruxo= input("digite o nome do bruxo:  ")
if(bruxo =="hermione"):
	print(vh)
else:
	print(vg)

	
-- EXECUTION TIME:
0.122651
-- TEST CASE 1:
---- input:
hermione
---- correct output:
1.6037309936539035
---- user output:
1.6037309936539035
-- TEST CASE 2:
---- input:
gina
---- correct output:
1.3173180351380422
---- user output:
1.3173180351380422
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 00:26:21) 
-- CODE:
eh= float(3.7654)
th = float(2.3479)
vh= eh/th
eg=float(3.674)
tg=float(2.789)
vg=eg/tg
bruxo= input("digite o nome do bruxo:  ")
if(bruxo =="hermione"):
	print(vh)
else:
	print(vg)

	
-- OUTPUT:
1.6037309936539035
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
